--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventHub - Professional Event Management</title>
-    <meta name="description" content="Discover and register for professional conferences, workshops, and networking events. Comprehensive event management with flexible registration options." />
-    <meta name="author" content="EventHub Team" />
+    <title>Korean Camp Meeting Event Management</title>
+    <meta name="description" content="Discover and register for Korean Camp Meeting!" />
+    <meta name="author" content="ECKCM Team" />
 
-    <meta property="og:title" content="EventHub - Professional Event Management" />
-    <meta property="og:description" content="Discover and register for professional conferences, workshops, and networking events." />
+    <meta property="og:title" content="ECKCM - WCKCM - Event Management" />
+    <meta property="og:description" content="Discover and register for Korean Adventist Events!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
